refactor AgdaJsonlDriver and solve Spark issues
+  Haskell test patch

   + keeps our existing "Example must be non-empty" expectations intact.
   + adds the new test for `Empty.agda` and asserts 0 rows.
   + hardens determinism by ensuring `libraries/defaults` exist in the isolated test AGDA_DIR, even when the outer env doesn't provide them.

+  add fail-on-error argument to backend driver target